include/fitpack_polar_c.h

/* ===========================================================================================
 * Callback Type Definitions
 * =========================================================================================== */
typedef double (*fitpack_polar_boundary_fn)(double);
/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief fit
 * @param smoothing 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_fit(const fitpack_polar_c* self, double* smoothing, bool* keep_knots);
/**
 * @brief least_squares
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_least_squares(const fitpack_polar_c* self, double* smoothing, bool* reset_knots);
/**
 * @brief interpolate
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_interpolate(const fitpack_polar_c* self, bool* reset_knots);
/**
 * @brief polr_eval_one
 * @param x 
 * @param y 
 * @param ierr 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_polar_c_polr_eval_one(const fitpack_polar_c* self, double x, double y, int32_t* ierr);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_comm_size(const fitpack_polar_c* self);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_polar_c_mse(const fitpack_polar_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_core_comm_size(const fitpack_polar_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_destroy_base(fitpack_polar_c* self);
/**
 * @brief new_points
 * @param x 
 * @param y 
 * @param z 
 * @param boundary 
 * @param w 
 * @param boundary_bc 
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_new_points(fitpack_polar_c* self, int32_t n, const double* x, const double* y, const double* z, fitpack_polar_boundary_fn boundary, double* w, int32_t* boundary_bc);
/**
 * @brief new_fit
 * @param x 
 * @param y 
 * @param z 
 * @param boundary 
 * @param w 
 * @param boundary_bc 
 * @param smoothing 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_polar_c_new_fit(const fitpack_polar_c* self, int32_t n, const double* x, const double* y, const double* z, fitpack_polar_boundary_fn boundary, double* w, int32_t* boundary_bc, double* smoothing);
/**
 * @brief polr_eval_many
 * @param x 
 * @param y 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(x)))
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_polr_eval_many(fitpack_polar_c* self, int32_t n, const double* x, const double* y, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_comm_pack(fitpack_polar_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_comm_expand(fitpack_polar_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_core_comm_pack(fitpack_polar_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_polar_c_core_comm_expand(fitpack_polar_c* self, int32_t n, const double* buffer);