src/fitpack_polar_domains_c.f90


    !> Create from Fortran object (owns copy)
    type(fitpack_polar_c) function fitpack_polar_c_f2c(f) result(c)
        type(fitpack_polar), intent(in) :: f
        type(fitpack_polar), pointer :: fptr
        logical :: ok

        ok = fitpack_polar_c_pointer(c, fptr)
        if (ok) fptr = f
    end function fitpack_polar_c_f2c

    !> Create from Fortran object (optionally as pointer)
    type(fitpack_polar_c) function fitpack_polar_c_fptr2c(f, want_pointer) result(c)
        type(fitpack_polar), intent(inout), target :: f
        logical, intent(in) :: want_pointer

        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_polar_c_f2c(f)
        end if
    end function fitpack_polar_c_fptr2c

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> fit
    integer(c_int32_t) function fitpack_polar_c_fit(this, smoothing, keep_knots) bind(C, name='fitpack_polar_c_fit')
        type(fitpack_polar_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_polar), pointer :: fthis
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_polar_c_fit = fthis%fit(smoothing=smoothing, keep_knots=f_keep_knots)
            else
                fitpack_polar_c_fit = fthis%fit(smoothing=smoothing)
            end if
        else
            fitpack_polar_c_fit = 0
        end if
    end function fitpack_polar_c_fit

    !> least_squares
    integer(c_int32_t) function fitpack_polar_c_least_squares(this, smoothing, reset_knots) bind(C,  &
        & name='fitpack_polar_c_least_squares')
        type(fitpack_polar_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_polar), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_polar_c_least_squares = fthis%least_squares(smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_polar_c_least_squares = fthis%least_squares(smoothing=smoothing)
            end if
        else
            fitpack_polar_c_least_squares = 0
        end if
    end function fitpack_polar_c_least_squares

    !> interpolate
    integer(c_int32_t) function fitpack_polar_c_interpolate(this, reset_knots) bind(C, name='fitpack_polar_c_interpolate')
        type(fitpack_polar_c), intent(in) :: this
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_polar), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_polar_c_interpolate = fthis%interpolate(reset_knots=f_reset_knots)
            else
                fitpack_polar_c_interpolate = fthis%interpolate()
            end if
        else
            fitpack_polar_c_interpolate = 0
        end if
    end function fitpack_polar_c_interpolate

    !> polr_eval_one
    real(c_double) function fitpack_polar_c_polr_eval_one(this, x, y, ierr) bind(C, name='fitpack_polar_c_polr_eval_one')
        type(fitpack_polar_c), intent(in) :: this
        real(c_double), intent(in), value :: x, y
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_polr_eval_one = fthis%eval(x, y, ierr)
        else
            fitpack_polar_c_polr_eval_one = 0.0_c_double
        end if
    end function fitpack_polar_c_polr_eval_one

    !> comm_size
    integer(c_int32_t) function fitpack_polar_c_comm_size(this) bind(C, name='fitpack_polar_c_comm_size')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_comm_size = fthis%comm_size()
        else
            fitpack_polar_c_comm_size = 0
        end if
    end function fitpack_polar_c_comm_size

    !> mse
    real(c_double) function fitpack_polar_c_mse(this) bind(C, name='fitpack_polar_c_mse')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_mse = fthis%mse()
        else
            fitpack_polar_c_mse = 0.0_c_double
        end if
    end function fitpack_polar_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_polar_c_core_comm_size(this) bind(C, name='fitpack_polar_c_core_comm_size')
        type(fitpack_polar_c), intent(in) :: this
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_polar_c_core_comm_size = 0
        end if
    end function fitpack_polar_c_core_comm_size

    !> destroy_base
    subroutine fitpack_polar_c_destroy_base(this) bind(C, name='fitpack_polar_c_destroy_base')
        type(fitpack_polar_c), intent(inout) :: this
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_polar_c_destroy_base

    !> new_points
    subroutine fitpack_polar_c_new_points(this, n, x, y, z, boundary, w, boundary_bc) bind(C, name='fitpack_polar_c_new_points')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        real(c_double), intent(in) :: z(n)
        procedure(fitpack_polar_boundary_capi) :: boundary
        real(c_double), optional, intent(in) :: w(n)
        integer(c_int32_t), intent(in), optional :: boundary_bc
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%new_points(x, y, z, boundary_ftn_adapter, w, boundary_bc)
        end if
    contains
        pure function boundary_ftn_adapter(theta) result(res)
            real(FP_REAL), intent(in) :: theta
            real(FP_REAL) :: res
            procedure(fitpack_polar_boundary_capi), pointer :: boundary_local
            boundary_local => boundary
            res = boundary_local(theta)
        end function boundary_ftn_adapter
    end subroutine fitpack_polar_c_new_points

    !> new_fit
    integer(c_int32_t) function fitpack_polar_c_new_fit(this, n, x, y, z, boundary, w, boundary_bc, smoothing) bind(C,  &
        & name='fitpack_polar_c_new_fit')
        type(fitpack_polar_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        real(c_double), intent(in) :: z(n)
        procedure(fitpack_polar_boundary_capi) :: boundary
        real(c_double), optional, intent(in) :: w(n)
        integer(c_int32_t), intent(in), optional :: boundary_bc
        real(c_double), intent(in), optional :: smoothing
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_polar_c_new_fit = fthis%new_fit(x, y, z, boundary_ftn_adapter, w, boundary_bc, smoothing)
        else
            fitpack_polar_c_new_fit = 0
        end if
    contains
        pure function boundary_ftn_adapter(theta) result(res)
            real(FP_REAL), intent(in) :: theta
            real(FP_REAL) :: res
            procedure(fitpack_polar_boundary_capi), pointer :: boundary_local
            boundary_local => boundary
            res = boundary_local(theta)
        end function boundary_ftn_adapter
    end function fitpack_polar_c_new_fit

    !> polr_eval_many
    subroutine fitpack_polar_c_polr_eval_many(this, n, x, y, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_polar_c_polr_eval_many')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:)
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(x=x, y=y, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = fresult(1:min(n_result, max_size))
        end if
    end subroutine fitpack_polar_c_polr_eval_many

    !> comm_pack
    subroutine fitpack_polar_c_comm_pack(this, n, buffer) bind(C, name='fitpack_polar_c_comm_pack')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_polar_c_comm_pack

    !> comm_expand
    subroutine fitpack_polar_c_comm_expand(this, n, buffer) bind(C, name='fitpack_polar_c_comm_expand')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_polar_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_polar_c_core_comm_pack(this, n, buffer) bind(C, name='fitpack_polar_c_core_comm_pack')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_polar_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_polar_c_core_comm_expand(this, n, buffer) bind(C, name='fitpack_polar_c_core_comm_expand')
        type(fitpack_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_polar_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================
